--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -164,7 +164,7 @@
     .page__lead,
     .btn {
       color: #000;
-      text-shadow: 1px 1px 4px rgba(#000, 0.5);
+      text-shadow: 1px 1px 4px rgba(#fff, 0.5);
     }
 
     .page__lead {
@@ -193,7 +193,7 @@
   right: 0;
   margin: 0 auto;
   padding: 2px 5px;
-  color: #fff;
+  color: #000;
   font-family: $caption-font-family;
   font-size: $type-size-7;
   background: #000;
@@ -207,7 +207,7 @@
   }
 
   a {
-    color: #fff;
+    color: #000;
     text-decoration: none;
   }
 }
