--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -4,7 +4,7 @@
 
 @charset "utf-8";
 
-$sans-serif-narrow  : "RobotoS", sans-serif;
+$sans-serif-narrow  : "Roboto", sans-serif;
 $header-font-family : $sans-serif-narrow;
 
 @import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
