--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -4,8 +4,11 @@
 
 @charset "utf-8";
 
+$serif              : Georgia, Times, serif;
 $sans-serif-narrow  : "Roboto", sans-serif;
+
 $header-font-family : $sans-serif-narrow;
+$global-font-family : $serif;
 
 @import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
 @import "minimal-mistakes"; // main partials
