Corrected contact form

--- a/_includes/contact-form.html
+++ b/_includes/contact-form.html
@@ -1,20 +1,19 @@
-<form action="https://mailthis.to/info@modelika.eu" method="POST" accept-charset="UTF-8" encType="multipart/form-data">
+<form action="https://mailthis.to/hi@artomatica.com" method="POST" accept-charset="UTF-8" encType="multipart/form-data">
  <fieldset>
- <label for="name">Imię</label><br>
- <input type="text" name="name" placeholder="Imię" id="name" required>
+ <label for="name">Name</label><br>
+ <input type="text" name="name" placeholder="Name" id="name" required>
  </fieldset>
  <fieldset>
  <label for="_replyto">email</label><br>
- <input type="Twój email do kontaktu" name="_replyto" placeholder="mój@email.pl" id="_replyto" required>
+ <input type="Your contact email" name="_replyto" placeholder="my@email.com" id="_replyto" required>
  </fieldset>
  <fieldset>
- <label for="message">Wiadomość</label><br>
- <textarea name="message" rows="1" placeholder="Wiadomość" id="message" required></textarea>
+ <label for="message">Message</label><br>
+ <textarea name="message" rows="1" placeholder="Message" id="message" required></textarea>
  </fieldset>
- <input type="file" name="plik" placeholder="">
  <input class="hidden" type="text" name="_gotcha" style="display:none">
- <input class="hidden" type="hidden" name="_subject" value="Message via http://modelika.eu"> 
+ <input class="hidden" type="hidden" name="_subject" value="Message via http://artomatica.com"> 
 
-<input type="hidden" name="_after" value="https://modelika.eu/kontakt">
-<input class="button submit" type="submit" value="Wyslać">
+<input type="hidden" name="_after" value="https://artomatica.com/contact">
+<input class="button submit" type="submit" value="Send">
 </form>
